[gd_scene load_steps=4 format=3 uid="uid://b0qowk3rd0jft"]

[ext_resource type="StyleBox" uid="uid://b0umwsa2clxit" path="res://assets/styleboxes/border_1_panel_texture.tres" id="1_onfjm"]
[ext_resource type="Script" uid="uid://c2ish7w866jih" path="res://scenes/adventure/adventure_tilemap/encounter_info_panel.gd" id="1_script"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_onfjm"]
color = Color(0, 0.5137255, 0, 1)
thickness = 3

[node name="EncounterInfoPanel" type="Panel"]
z_index = 2
custom_minimum_size = Vector2(400, 500)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_onfjm")
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Encounter Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Encounter description goes here..."
fit_content = true
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxLine_onfjm")

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
